2009-12-01 Riccardo Mottola <rmottola@users.sf.net>

	* Gorm.m: do not open untitled document on application start

2009-12-01 German Arias <german@xelalug.org>

	* GormCore/GormDocument.m: Changes to prevent menus placed off screen
	on screens with low resolutions

2009-11-11 09:27-WIT Hans Baier <hansfbaier@googlemail.com>

	* English.lproj/Gorm.gorm: remove duplicate keyboard shortcut #p
	(now pops up palette only)
	
2009-10-13 23:52-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormFunctions.m: Temporary change to fix compilation
	problem.
	* GormCore/GormViewEditor.m: Added code to show id of the object 
	as a tooltip.

2009-09-22 16:59-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormViewWithSubviewsEditor.m: Call super instead of
	parent.  Corrects issue with connecting to NSBox and 
	NSProgressIndicator.
	Patch by Wolfgang Lux <wolfgang.lux@gmail.com>

2009-09-06 23:55-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* English.lproj/Gorm.gorm
	* GormCore/GormGenericEditor.h
	* GormCore/GormViewWithContentViewEditor.h
	* GormCore/GormViewWithContentViewEditor.m
	* Gorm.m: Beginning of implementation of groupSelectionInView:

2009-08-22 18:04-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormOutlineView.m: Remove .tiff from the end of the images.
	This is interfering with theming in gorm since it's not pulling the
	right images in this case.
	* Plugins/Nib/GormNibCustomResource.[hm]: Handle custom resources
	in gorm, currently just images/sounds.
	* Plugins/Nib/GormNibWrapperLoader.h: Include nib resource header

2009-08-10 10:02-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDefines.h: Move defines for certain things here
	so that they are centralized.

2009-08-08 03:09-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GNUmakefile: Added reference to new classes.
	* GormCore/GormBoxEditor.m: Cleanup.