@@ -177,7 +177,7 @@
 
 - (BOOL)applicationShouldOpenUntitledFile: (NSApplication *)sender
 {
-  return NO;
+  return YES;
 }
 
 - (void) applicationDidFinishLaunching: (NSApplication*)sender
