@@ -30,7 +30,8 @@ Nib_PRINCIPAL_CLASS = GormNibPlugin
 
 Nib_OBJC_FILES = GormNibPlugin.m \
 GormNibWrapperBuilder.m \
-GormNibWrapperLoader.m
+GormNibWrapperLoader.m \
+GormWindowTemplate.m
 
 Nib_RESOURCE_FILES = 
 
